fix-gap

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,7 +7,7 @@
 .item {
   display: flex;
   align-items: center;
-  > * {
-    margin: $m-sm;
+  > *:first-child {
+    margin-inline-end: $m-sm;
   }
 }
